NetBeans/LOST/src/lost/Parser/FOLParser.java
// Generated from FOL.g4 by ANTLR 4.0
package lost.Parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FOLParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, LPAREN=2, RPAREN=3, AND=4, OR=5, NOT=6, IMPLIES=7, EXISTS=8, FORALL=9, 
		TRUTH=10, FALSITY=11, EQUALS=12, EQUIV=13, VARIABLE=14, RELNAME=15, WS=16;
	public static final String[] tokenNames = {
		"<INVALID>", "','", "'('", "')'", "'∧'", "'∨'", "'¬'", "'→'", "'∃'", "'∀'", 
		"'⊤'", "'⊥'", "'='", "'↔'", "VARIABLE", "RELNAME", "WS"
	};
	public static final int
		RULE_condition = 0, RULE_formula = 1, RULE_equivalence = 2, RULE_implication = 3, 
		RULE_disjunction = 4, RULE_conjunction = 5, RULE_negation = 6, RULE_relation = 7, 
		RULE_binaryarg = 8, RULE_unaryarg = 9, RULE_quantifier = 10, RULE_term = 11, 
		RULE_constant = 12, RULE_nonRecursiveFormula = 13;
	public static final String[] ruleNames = {
		"condition", "formula", "equivalence", "implication", "disjunction", "conjunction", 
		"negation", "relation", "binaryarg", "unaryarg", "quantifier", "term", 
		"constant", "nonRecursiveFormula"
	};

	@Override
	public String getGrammarFileName() { return "FOL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public FOLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ConditionContext extends ParserRuleContext {
		public TerminalNode RPAREN() { return getToken(FOLParser.RPAREN, 0); }
		public TerminalNode EOF() { return getToken(FOLParser.EOF, 0); }
		public TerminalNode LPAREN() { return getToken(FOLParser.LPAREN, 0); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).exitCondition(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_condition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(28); match(LPAREN);
				setState(29); formula();
				setState(30); match(RPAREN);
				}
				break;

			case 2:
				{
				setState(32); formula();
				}
				break;
			}
			setState(35); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormulaContext extends ParserRuleContext {
		public TerminalNode RPAREN() { return getToken(FOLParser.RPAREN, 0); }
		public EquivalenceContext equivalence() {
			return getRuleContext(EquivalenceContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(FOLParser.LPAREN, 0); }
		public FormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).enterFormula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).exitFormula(this);
		}
	}

	public final FormulaContext formula() throws RecognitionException {
		FormulaContext _localctx = new FormulaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_formula);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(37); match(LPAREN);
				setState(38); equivalence();
				setState(39); match(RPAREN);
				}
				break;

			case 2:
				{
				setState(41); equivalence();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EquivalenceContext extends ParserRuleContext {
		public List<TerminalNode> EQUIV() { return getTokens(FOLParser.EQUIV); }
		public List<TerminalNode> RPAREN() { return getTokens(FOLParser.RPAREN); }
		public TerminalNode EQUIV(int i) {
			return getToken(FOLParser.EQUIV, i);
		}
		public TerminalNode RPAREN(int i) {
			return getToken(FOLParser.RPAREN, i);
		}
		public List<ImplicationContext> implication() {
			return getRuleContexts(ImplicationContext.class);
		}
		public TerminalNode LPAREN(int i) {
			return getToken(FOLParser.LPAREN, i);
		}
		public ImplicationContext implication(int i) {
			return getRuleContext(ImplicationContext.class,i);
		}
		public List<TerminalNode> LPAREN() { return getTokens(FOLParser.LPAREN); }
		public EquivalenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equivalence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).enterEquivalence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).exitEquivalence(this);
		}
	}

	public final EquivalenceContext equivalence() throws RecognitionException {
		EquivalenceContext _localctx = new EquivalenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_equivalence);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(49);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						setState(44); match(LPAREN);
						setState(45); implication();
						setState(46); match(RPAREN);
						}
						break;

					case 2:
						{
						setState(48); implication();
						}
						break;
					}
					setState(51); match(EQUIV);
					}
					} 
				}
				setState(57);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(63);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(58); match(LPAREN);
				setState(59); implication();
				setState(60); match(RPAREN);
				}
				break;

			case 2:
				{
				setState(62); implication();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImplicationContext extends ParserRuleContext {
		public TerminalNode IMPLIES(int i) {
			return getToken(FOLParser.IMPLIES, i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(FOLParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(FOLParser.RPAREN, i);
		}
		public List<TerminalNode> IMPLIES() { return getTokens(FOLParser.IMPLIES); }
		public DisjunctionContext disjunction(int i) {
			return getRuleContext(DisjunctionContext.class,i);
		}
		public List<DisjunctionContext> disjunction() {
			return getRuleContexts(DisjunctionContext.class);
		}
		public TerminalNode LPAREN(int i) {
			return getToken(FOLParser.LPAREN, i);
		}
		public List<TerminalNode> LPAREN() { return getTokens(FOLParser.LPAREN); }
		public ImplicationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_implication; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).enterImplication(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).exitImplication(this);
		}
	}

	public final ImplicationContext implication() throws RecognitionException {
		ImplicationContext _localctx = new ImplicationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_implication);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(70);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						setState(65); match(LPAREN);
						setState(66); disjunction();
						setState(67); match(RPAREN);
						}
						break;

					case 2:
						{
						setState(69); disjunction();
						}
						break;
					}
					setState(72); match(IMPLIES);
					}
					} 
				}
				setState(78);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(84);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(79); match(LPAREN);
				setState(80); disjunction();
				setState(81); match(RPAREN);
				}
				break;

			case 2:
				{
				setState(83); disjunction();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DisjunctionContext extends ParserRuleContext {
		public ConjunctionContext conjunction(int i) {
			return getRuleContext(ConjunctionContext.class,i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(FOLParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(FOLParser.RPAREN, i);
		}
		public TerminalNode OR(int i) {
			return getToken(FOLParser.OR, i);
		}
		public TerminalNode LPAREN(int i) {
			return getToken(FOLParser.LPAREN, i);
		}
		public List<ConjunctionContext> conjunction() {
			return getRuleContexts(ConjunctionContext.class);
		}
		public List<TerminalNode> LPAREN() { return getTokens(FOLParser.LPAREN); }
		public List<TerminalNode> OR() { return getTokens(FOLParser.OR); }
		public DisjunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_disjunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).enterDisjunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).exitDisjunction(this);
		}
	}

	public final DisjunctionContext disjunction() throws RecognitionException {
		DisjunctionContext _localctx = new DisjunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_disjunction);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(91);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						setState(86); match(LPAREN);
						setState(87); conjunction();
						setState(88); match(RPAREN);
						}
						break;

					case 2:
						{
						setState(90); conjunction();
						}
						break;
					}
					setState(93); match(OR);
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(105);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(100); match(LPAREN);
				setState(101); conjunction();
				setState(102); match(RPAREN);
				}
				break;

			case 2:
				{
				setState(104); conjunction();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConjunctionContext extends ParserRuleContext {
		public List<NegationContext> negation() {
			return getRuleContexts(NegationContext.class);
		}
		public List<TerminalNode> RPAREN() { return getTokens(FOLParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(FOLParser.RPAREN, i);
		}
		public NegationContext negation(int i) {
			return getRuleContext(NegationContext.class,i);
		}
		public TerminalNode LPAREN(int i) {
			return getToken(FOLParser.LPAREN, i);
		}
		public List<TerminalNode> AND() { return getTokens(FOLParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(FOLParser.AND, i);
		}
		public List<TerminalNode> LPAREN() { return getTokens(FOLParser.LPAREN); }
		public ConjunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conjunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).enterConjunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).exitConjunction(this);
		}
	}

	public final ConjunctionContext conjunction() throws RecognitionException {
		ConjunctionContext _localctx = new ConjunctionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_conjunction);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(112);
					switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
					case 1:
						{
						setState(107); match(LPAREN);
						setState(108); negation();
						setState(109); match(RPAREN);
						}
						break;

					case 2:
						{
						setState(111); negation();
						}
						break;
					}
					setState(114); match(AND);
					}
					} 
				}
				setState(120);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			setState(126);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(121); match(LPAREN);
				setState(122); negation();
				setState(123); match(RPAREN);
				}
				break;

			case 2:
				{
				setState(125); negation();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NegationContext extends ParserRuleContext {
		public List<QuantifierContext> quantifier() {
			return getRuleContexts(QuantifierContext.class);
		}
		public TerminalNode RPAREN() { return getToken(FOLParser.RPAREN, 0); }
		public NonRecursiveFormulaContext nonRecursiveFormula() {
			return getRuleContext(NonRecursiveFormulaContext.class,0);
		}
		public List<TerminalNode> NOT() { return getTokens(FOLParser.NOT); }
		public TerminalNode NOT(int i) {
			return getToken(FOLParser.NOT, i);
		}
		public QuantifierContext quantifier(int i) {
			return getRuleContext(QuantifierContext.class,i);
		}
		public TerminalNode LPAREN() { return getToken(FOLParser.LPAREN, 0); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public NegationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_negation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).enterNegation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).exitNegation(this);
		}
	}

	public final NegationContext negation() throws RecognitionException {
		NegationContext _localctx = new NegationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_negation);
		int _la;
		try {
			int _alt;
			setState(207);
			switch ( getInterpreter().adaptivePredict(_input,27,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(129); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(128); match(NOT);
					}
					}
					setState(131); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NOT );
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==EXISTS || _la==FORALL) {
					{
					{
					setState(133); quantifier();
					}
					}
					setState(138);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(144);
				switch (_input.LA(1)) {
				case LPAREN:
					{
					setState(139); match(LPAREN);
					setState(140); nonRecursiveFormula();
					setState(141); match(RPAREN);
					}
					break;
				case TRUTH:
				case FALSITY:
				case VARIABLE:
				case RELNAME:
					{
					setState(143); nonRecursiveFormula();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(147); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(146); match(NOT);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(149); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
				} while ( _alt!=2 && _alt!=-1 );
				setState(154);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
				while ( _alt!=2 && _alt!=-1 ) {
					if ( _alt==1 ) {
						{
						{
						setState(151); quantifier();
						}
						} 
					}
					setState(156);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
				}
				setState(162);
				switch ( getInterpreter().adaptivePredict(_input,19,_ctx) ) {
				case 1:
					{
					setState(157); match(LPAREN);
					setState(158); formula();
					setState(159); match(RPAREN);
					}
					break;

				case 2:
					{
					setState(161); formula();
					}
					break;
				}
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(165); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(164); quantifier();
					}
					}
					setState(167); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==EXISTS || _la==FORALL );
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NOT) {
					{
					{
					setState(169); match(NOT);
					}
					}
					setState(174);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(180);
				switch (_input.LA(1)) {
				case LPAREN:
					{
					setState(175); match(LPAREN);
					setState(176); nonRecursiveFormula();
					setState(177); match(RPAREN);
					}
					break;
				case TRUTH:
				case FALSITY:
				case VARIABLE:
				case RELNAME:
					{
					setState(179); nonRecursiveFormula();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(183); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,23,_ctx);
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(182); quantifier();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(185); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,23,_ctx);
				} while ( _alt!=2 && _alt!=-1 );
				setState(190);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,24,_ctx);
				while ( _alt!=2 && _alt!=-1 ) {
					if ( _alt==1 ) {
						{
						{
						setState(187); match(NOT);
						}
						} 
					}
					setState(192);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,24,_ctx);
				}
				setState(198);
				switch ( getInterpreter().adaptivePredict(_input,25,_ctx) ) {
				case 1:
					{
					setState(193); match(LPAREN);
					setState(194); formula();
					setState(195); match(RPAREN);
					}
					break;

				case 2:
					{
					setState(197); formula();
					}
					break;
				}
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(205);
				switch (_input.LA(1)) {
				case TRUTH:
				case FALSITY:
				case VARIABLE:
				case RELNAME:
					{
					setState(200); nonRecursiveFormula();
					}
					break;
				case LPAREN:
					{
					setState(201); match(LPAREN);
					setState(202); nonRecursiveFormula();
					setState(203); match(RPAREN);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelationContext extends ParserRuleContext {
		public TerminalNode RELNAME() { return getToken(FOLParser.RELNAME, 0); }
		public UnaryargContext unaryarg() {
			return getRuleContext(UnaryargContext.class,0);
		}
		public BinaryargContext binaryarg() {
			return getRuleContext(BinaryargContext.class,0);
		}
		public RelationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).enterRelation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).exitRelation(this);
		}
	}

	public final RelationContext relation() throws RecognitionException {
		RelationContext _localctx = new RelationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_relation);
		try {
			setState(214);
			switch ( getInterpreter().adaptivePredict(_input,28,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(209); match(RELNAME);
				setState(210); binaryarg();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(211); match(RELNAME);
				setState(212); unaryarg();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(213); match(RELNAME);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinaryargContext extends ParserRuleContext {
		public TerminalNode RPAREN() { return getToken(FOLParser.RPAREN, 0); }
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public TerminalNode LPAREN() { return getToken(FOLParser.LPAREN, 0); }
		public BinaryargContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binaryarg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).enterBinaryarg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).exitBinaryarg(this);
		}
	}

	public final BinaryargContext binaryarg() throws RecognitionException {
		BinaryargContext _localctx = new BinaryargContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_binaryarg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(216); match(LPAREN);
			setState(217); term();
			setState(218); match(1);
			setState(219); term();
			setState(220); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnaryargContext extends ParserRuleContext {
		public TerminalNode RPAREN() { return getToken(FOLParser.RPAREN, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(FOLParser.LPAREN, 0); }
		public UnaryargContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unaryarg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).enterUnaryarg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).exitUnaryarg(this);
		}
	}

	public final UnaryargContext unaryarg() throws RecognitionException {
		UnaryargContext _localctx = new UnaryargContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_unaryarg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(222); match(LPAREN);
			setState(223); term();
			setState(224); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuantifierContext extends ParserRuleContext {
		public TerminalNode FORALL() { return getToken(FOLParser.FORALL, 0); }
		public TerminalNode EXISTS() { return getToken(FOLParser.EXISTS, 0); }
		public TerminalNode VARIABLE() { return getToken(FOLParser.VARIABLE, 0); }
		public QuantifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quantifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).enterQuantifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).exitQuantifier(this);
		}
	}

	public final QuantifierContext quantifier() throws RecognitionException {
		QuantifierContext _localctx = new QuantifierContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_quantifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(226);
			_la = _input.LA(1);
			if ( !(_la==EXISTS || _la==FORALL) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(227); match(VARIABLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public TerminalNode VARIABLE() { return getToken(FOLParser.VARIABLE, 0); }
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_term);
		try {
			setState(231);
			switch (_input.LA(1)) {
			case VARIABLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(229); match(VARIABLE);
				}
				break;
			case RELNAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(230); constant();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public TerminalNode RELNAME() { return getToken(FOLParser.RELNAME, 0); }
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FOLListener ) ((FOLListener)listener).exitConstant(this);
		}
	}
